files/assets/css/main.css
/* ... */
.modlog-action:not(:first-of-type) {
	border-top: 1px solid var(--gray-400) !important;
}

:root {
	--signature-max-height: 300px;
}

.user-signature {
	max-height: var(--signature-max-height);
	overflow: clip;
}

.award-name {
	font-weight: bold;
	color:#E1E1E1;
}

.award-name, .award-owned {
	font-size: 13px;
}

@media (max-width: 768px) {
	.award-name, .award-owned {
		font-size: 11px;
	}
	.awards-wrapper > div {
		width: 101px!important;
	}
	.download-video {
		font-size: 10px;
	}
}

.sub-banner-update-section .sub-settings-subsection {
	margin-bottom: 1em;
}

.resizable {
	resize: both;
	display: inline-block;
	overflow: auto;
	max-height: 72vh !important;
	max-width: 100vw !important;
}
.resizable > video {
	height: 100% !important;
	width: 100% !important;
	max-height: 70vh !important;
	max-width: 100vw !important;
	margin: 0 !important;
}

.user-signature video {
	max-height: min(var(--signature-max-height),50vh) !important;
}

.comment-text lite-youtube, #post-text lite-youtube {
    max-width: 500px;
    margin-top: 5px;
}
.btn {
    overflow: hidden;
}

.giphy {
	overflow: hidden;
	background-color: var(--gray-600);
	cursor: pointer;
}

#root > div.App {
	background-color: rgb(var(--background));
}

.gif-categories img {
	border-radius: 0.35rem;
	width: 200px;
	height: 35vh;
	margin: 0 10px;
	-o-object-fit: contain;
	object-fit: contain;
	-webkit-transition: all 0.15s ease;
	-moz-transition: all 0.15s ease;
	-o-transition: all 0.15s ease;
	-ms-transition: all 0.15s ease;
	transition: all 0.15s ease;
	cursor: pointer;
}
.gif-categories img:hover {
	border: 3px solid var(--primary);
}


.gif-categories .card .gif-cat-overlay {
	position: absolute;
	text-align: center;
	height: 100%;
	width: 100%;
	background-color: rgba(0, 0, 0, 0.4);
	border-radius: 0.35rem;
	-webkit-transition: all 0.15s ease;
	-moz-transition: all 0.15s ease;
	-o-transition: all 0.15s ease;
	-ms-transition: all 0.15s ease;
	transition: all 0.15s ease;
	cursor: pointer;
}
.gif-categories .card:hover .gif-cat-overlay {
	background-color: rgba(0, 0, 0, 0.6);
	border: 3px solid var(--primary);
}
.gif-categories .card {
	display: inline-block;
	margin: 0;
}
.gif-categories .card img {
	margin: 0;
}
.gif-cat-overlay > div {
	position: relative;
	top: 50%;
	transform: translateY(-50%);
	color: #ffffff;
	font-weight: bold;
}

body * {
	-ms-overflow-style: none;
	scrollbar-width: none;
}
body *::-webkit-scrollbar {
	display: none;
}

.shop-tabs {
	padding-top: 50px;
}

@media (max-width: 768px) {
	#hats-banner, #shop-banner {
		width: 80%;
	}
	.shop-tabs {
		padding-top: 30px;
	}
}

.shop-tab {
	display: inline-flex;
	max-width: 46.6%;
	letter-spacing: 3px;
	border-radius: 0;
}

.shop-tab.active {
	background-color: var(--primary) !important;
	pointer-events: none !important;
	cursor: default !important;
}

body > .container {
	padding-left: 20px !important;
	padding-right: 20px !important;
}

.emoji2 {
	/*background: None!important;*/
	width:60px;
	height: 85px;
	overflow: hidden;
	border: none
}
.emoji2 > img {
	-o-object-fit: contain;
	object-fit: contain;
}

.bg-image {
	padding: 0.25rem;
	width: 15rem;
	height: 10rem;
	object-fit: cover;
}
.bg-button {
	margin: 0.25rem;
	padding: 0;
}

.dismiss-beg {
	color: #919191;
	float: left;
	font-size: 14px;
	padding: 0.25rem 0.7rem 2rem 0.7rem;
}

#mobile-prompt + .bs-tooltip-bottom {
	transform: None !important;
	inset: 0px 0px auto auto !important;
}

.mod-rdrama:before {
	content: '(((';
}
.mod-rdrama:after {
	content: ')))';
}

#emojiTabs {height: 80%;}
@media (max-width: 650px) {
	#emojiTabs {height: 100%;}
	#emojiModalInternalDivIDK {margin-top: 0 !important; margin-bottom: 0 !important; padding-top: 3rem !important; padding-bottom: 0 !important;}

	#emoji-modal-tabs-container {
		overflow-x: auto;
	}

	#emoji-modal-tabs {
		white-space: nowrap;
		flex-wrap: nowrap;
	}

	#emoji-modal-tabs li {
		display: inline-block;
	}
}

@media (min-width: 1000px) {
	#logo-WPD {
		width: 100px;
		margin-left: 0.5rem !important;
	}
}

@media (min-width: 380px) {
	#logo-rDrama {
		width: 100px;
		margin-left: 0.5rem !important;
	}
}

@media (min-width: 1400px) {
	.awardmodal {
		max-width: min(90%, 1200px) !important
	}
}

select {
	padding-top: 0 !important;
	padding-bottom: 0 !important;
}

body {
	background-color: rgb(var(--background));
}

.color-picker .fa-check {
    line-height: 2.3;
}

.modal, body, nav {
	padding-right: 0 !important;
}

.dm_img[alt^="![]("] {
	width: 200px;
	max-height: 100vh !important;
}

.navbar-nav > .nav-item {
	text-align: left;
}

sub, sup {
	color: var(--black) !important;
}

@media (max-width: 768px) {
	.comment-text * {
		max-height: 50vh;
		overflow: auto;
	}
}

